# crustcrawler_throwing_ball_exp

./: CMakeLists.txt  package.xml
Trajectory_Data/: 1.txt  2.txt  feedback.csv
far_trajectory/: 103.txt  105.txt  12.txt  13.txt  19.txt  2.txt  22.txt  25.txt  26.txt  27.txt  29.txt  35.txt  38.txt  40.txt  41.txt  42.txt  43.txt  44.txt  46.txt  51.txt  54.txt  56.txt  60.txt  64.txt  65.txt  73.txt  74.txt  75.txt  77.txt  78.txt  81.txt  82.txt  84.txt  85.txt  89.txt  9.txt  90.txt  91.txt  96.txt  98.txt
good_trajectory/: 12.txt  13.txt  17.txt  19.txt  20.txt  21.txt  3.txt  4.txt  5.txt  6.txt  8.txt  feedback.txt
include/crustcrawler_throwing_ball_exp/: tools.hpp
launch/: crustcrawler_throwing_ball.launch
src/: parameters.hpp  throw_ball_naive.cpp
src/lib/: tools.cpp
throwing_crustcrawler/: 1.txt  100.txt  103.txt  105.txt  106.txt  109.txt  11.txt  110.txt  113.txt  114.txt  118.txt  119.txt  120.txt  123.txt  124.txt  131.txt  134.txt  136.txt  137.txt  138.txt  139.txt  14.txt  140.txt  142.txt  144.txt  145.txt  148.txt  15.txt  150.txt  152.txt  153.txt  154.txt  155.txt  156.txt  157.txt  158.txt  159.txt  16.txt  160.txt  161.txt  (+96 more)
two_boxes_trajectory/: 1.txt  10.txt  11.txt  12.txt  14.txt  17.txt  2.txt  20.txt  24.txt  26.txt  27.txt  4.txt  5.txt  7.txt  8.txt  9.txt  feedback.txt
world/ball/: model.sdf
world/cube/: model.sdf
world/cylinder/: model.sdf
world/table/: model.config  model.sdf
